# Castorice-Agent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  castorice_config.yaml  docker-compose.yml  install.bat  openapi.json  pyproject.toml  start.bat  test_memory_fix.py
.github/workflows/: ci.yml
castorice/: __init__.py  agent.py  alerts.py  config.py  conversation_importer.py  emotion.py  event_bus.py  experience_journal.py  http_client.py  main.py  metacognition.py  metrics.py  model_adapter.py  motivation.py  multi_agent.py  notifications.py  openapi_generator.py  plugin.py  reflection.py  response_cache.py  self_awareness.py  self_concept.py  self_organization.py  social_relation.py  sqlite_utils.py  tool_learning.py  utils.py
castorice/adapters/: __init__.py  http_server.py  qq_bot.py
castorice/agent/: __init__.py  common.py  core.py  memory_ops.py  prompt_builder.py  tool_loop.py
castorice/memory/: __init__.py  autobiographical.py  intent_tracker.py  interface.py  long_term.py  short_term.py  skill.py  unified_recall.py  user_profile.py
castorice/model_adapter/: __init__.py  adapter.py  common.py
castorice/model_adapter/providers/: anthropic_provider.py  gemini_provider.py  openai_provider.py  qwen_provider.py
castorice/plugins/: __init__.py  example_plugin.py
castorice/security/: audit_log.py  authorization.py  file_guard.py  pattern_detector.py  rollback.py
castorice/server/: __init__.py  cli_handler.py  cron_scheduler.py  engine_factory.py  http_server.py  qq_bot.py
castorice/tools/: __init__.py  base_tools.py  web_tools.py
memory/: user_profile.json
plugins/: example_plugin.py
sdk/castorice_emotion/: README.md  pyproject.toml
sdk/castorice_emotion/src/castorice_emotion/: __init__.py  _compat.py  emotion.py  experience_journal.py  metacognition.py  reflection.py  self_concept.py
tests/: run_all_tests.py  test_agent_core.py  test_autobiographical.py  test_benchmark.py  test_conversation_importer.py  test_emotion.py  test_http_client.py  test_integration.py  test_intent_tracker.py  test_memory.py  test_model_adapter.py  test_multi_agent.py  test_notifications.py  test_openapi.py  test_reflection.py  test_response_cache.py  test_security_authorization.py  test_security_file_guard.py  test_security_pattern_detector.py  test_security_rollback.py  test_self_modules.py  test_social_relation.py  test_sqlite_utils.py  test_tool_learning.py  test_tools.py
